syntax = "proto3";
option java_multiple_files = true;

package com.techhub.grpc.services.employee;

/* Defines the GRPC EmployeeService */
service EmployeeService{
  rpc EmployeeStream(stream EmployeeControl) returns (stream EmployeeResponseData){}
  rpc AddEmployee(stream EmployeeRequestData) returns (stream EmployeeResponseData){}
}

/* Defines the GRPC EmployeeRequest */
message EmployeeRequestData{
  string name=1;
}

/* Defines the GRPC EmployeeResponse */
message EmployeeResponseData{
  string msg = 1;
}

/* Defines the GRPC EmployeeControl */
message EmployeeControl{
  bool enabled = 1;
}